# vesper

./: .gitignore  AGENTS.md  README.md  config.example.json  historian.manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
cider_agent/: a2a.py  action_registry.py  app.py  cli.py  config.py  errors.py  mcp_server.py  renderers.py  resolver.py  service.py  storage.py
docs/: adaptive-sessions.md  architecture.md  development.md  transports.md
tests/: __init__.py  conftest.py  test_a2a.py  test_cli.py  test_config.py  test_historian.py  test_mcp.py  test_multi_source_interleave.py  test_output.py  test_resolver.py  test_rpc.py  test_service.py  test_storage.py  test_typed_session_sources.py  test_validation.py
vesper/: __init__.py  __main__.py  a2a.py  action_registry.py  app.py  catalog.py  cli.py  config.py  errors.py  events.py  historian.py  mcp_server.py  output.py  playback_controller.py  preference_controller.py  renderers.py  resolver.py  resolver_debug.py  results.py  rpc.py  search_controller.py  service.py  session.py  session_queue.py  session_runtime.py  session_sources.py  storage.py  text_request_controller.py  utils.py  validation.py
vesper/prompts/: __init__.py  playlist_selection.txt  resolver.txt  session_planner.txt  session_queue_filter.txt  vibe_rephrase.txt
vesper/storage/: __init__.py  preferences.py  schema.py  session_data.py  session_queue.py  sessions.py
