[project]
name = "vesper"
version = "0.1.0"
description = "A2A-capable music control agent for the Cider Apple Music client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk>=1.1,<1.2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mcp>=1.2,<2",
  "sse-starlette>=2.1,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
vesper = "vesper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vesper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
