[project]
name = "vesper"
version = "0.1.0"
description = "A2A-capable music control agent for the Cider Apple Music client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk>=1.1,<1.2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mcp>=1.2,<2",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "sse-starlette>=2.1,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.0",
  "ruff>=0.6",
  "types-protobuf",
]

[project.scripts]
vesper = "vesper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vesper"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Baseline rules: pyflakes (F), pycodestyle errors (E) and warnings (W).
# E501 (line-too-long) is ignored because the codebase is not formatted to a
# fixed line length; enabling it would produce a large, unrelated diff. More
# rule groups (I, UP, B, etc.) can be added incrementally once the codebase is
# formatted.
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

# The session mixins (SessionSourcesMixin, SessionQueueMixin,
# SessionRuntimeMixin) use cooperative inheritance: each mixin calls
# methods/attributes defined on sibling mixins or the combined
# SessionEngine. mypy cannot follow these cross-mixin references, so
# attr-defined is suppressed for those three modules only.
[[tool.mypy.overrides]]
module = [
  "vesper.session_sources",
  "vesper.session_queue",
  "vesper.session_runtime",
]
disable_error_code = ["attr-defined"]
